fix layout issues on ios

--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/RootLayout.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/RootLayout.razor.scss
@@ -6,8 +6,6 @@
 .layout {
     width: 100%;
     height: 100%;
-    min-width: 100vw;
-    min-height: 100vh;
     background-color: $bit-color-background-primary;
     --app-inset-top: env(safe-area-inset-top);
     --app-inset-bottom: env(safe-area-inset-bottom);
@@ -22,6 +20,7 @@
     overflow: auto;
     position: relative;
     scroll-behavior: smooth;
+    overscroll-behavior: none;
     height: calc(100% - var(--app-inset-top) - var(--app-inset-bottom));
 }
 
